--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cube-ui": "~1.12.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
@@ -17,10 +18,11 @@
     "@vue/cli-service": "^3.2.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "postcss-px2rem": "^0.3.0",
+    "style-resources-loader": "^1.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-cube-ui": "^0.2.4",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.5.17"
   },
   "transformModules": {
